--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,10 @@
     float: left; 
     margin-right: 1em;
   }
-
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
   body{
     padding: 0;
     margin: 0;
@@ -87,5 +90,6 @@ nav ul li a:visited{
   display: block;
   border-bottom: 1px solid #777;
 }
-
 }
+
+
