--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,30 @@
 .responsive {
   max-width: 100%;
   height: auto;
+  
 }
+
+.about {
+  border-style: solid;
+  border-width: 1px;
+  border-color: grey;
+  background-color: grey;
+  font-size: 17px;
+  text-shadow: 2px 5px olivedrab;
+ 
+}
+
+.around {
+  border-style: solid;
+  border-width: 75px;
+  border-color: teal; 
+}
+#name {
+  text-align: center;
+  font-size: 75px;
+  text-shadow: 5px 5px grey;
+
+  }
   body{
     padding: 0;
     margin: 0;
@@ -16,27 +39,39 @@
 
 * {
   font-family: 'Open Sans', sans-serif;
+
 }
 header {
-    height: 50px;
-    background: #000;
-    color: #fff;
-    padding: 0 .5rem 0 1rem;
+  height: 30px;
+  background: black;
+  color: white;
+  padding: 30px 20px 30px 20px;
+  border-style: solid;
+  border-width: 60px;
+  border-color: rgba(70, 122, 175, 0.753);
+    
   }
   
   header .logo{
-    line-height: 50px;
+    line-height: 30px;
     font-weight: bold;
+    
   }
-  
+
   nav {
     float: right;
+    border-style: solid;
+    border-color: silver;
+    border-width: 10px;
   }
-  
+  #menu {
+    font-size: 20px;
+  }
   nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+  
   }
   
   nav ul li{
@@ -48,7 +83,7 @@ header {
   nav ul li a:visited{
     display: inline-block;
     padding: 0 .5rem;
-    color: #fff;
+    color: white;
     line-height: 50px;
     text-decoration: none;
   }
@@ -56,10 +91,11 @@ header {
   nav ul li a:hover{
     background: #444;
   }
-
+  
   main {
   /* Use a margin to center the page */
   margin: 0 auto;
+  
 
   /* Set the width of the content */
   width: 960px;
@@ -79,6 +115,7 @@ header {
     line-height: 50px;
   }
 
+
   nav {
     display: none;
     background: #000;
@@ -89,7 +126,38 @@ nav ul li a:link,
 nav ul li a:visited{
   display: block;
   border-bottom: 1px solid #777;
-}
+
 }
 
+h1 {
+  font-size: 60px; }
 
+h2 {
+  font-size: 30px; }
+
+p {
+  font-size: 18px;
+  text-align: justify; }
+
+.company {
+  font-size: 25px;
+  font-weight: bold;
+  font-style: italic; }
+
+.place {
+  font-size: 20px; }
+
+.year {
+  font-size: 20px;
+  float: right; }
+
+.job {
+  font-size: 20px;
+  font-style: italic; }
+
+.links {
+  font-size: 20px; }
+
+.summaryskills {
+  font-size: 18px; }
+}
