--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -129,9 +129,12 @@ p {
 .links {
   font-size: 20px; }
 
+.lab {
+  font-size: 23px;
+}
 .summaryskills {
   font-size: 18px; }
-
+  
 @media only screen and (max-width: 960px)  {
 
   #toggleMenu {
@@ -158,7 +161,6 @@ h1 {
   font-size: 60px; }
 
 h2 {
-  font-size: 30px; }
-
+  font-size: 35px; }
 
 }
